Fix #69 - Allows toggle of featured articles when in article view (defaults to false)

--- a/views/kb.hbs
+++ b/views/kb.hbs
@@ -1,10 +1,10 @@
 <div class="row">
 	<form action="/search" id="search_form" method="post">
-		{{#if config.settings.show_featured_articles}}
+		{{#ifBoth config.settings.show_featured_articles config.settings.show_featured_in_article}}
 		    <div class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 search_bar">
         {{else}}
             <div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 search_bar">
-        {{/if}}
+        {{/ifBoth}}
 			<div class="input-group">
 				<input type="text" name="frm_search" id="frm_search" class="form-control input-lg" placeholder="Search the knowledge base">
 				<span class="input-group-btn">
@@ -15,7 +15,7 @@
 	</form>
 </div>
 <div class="row">
-    {{#if config.settings.show_featured_articles}}
+    {{#ifBoth config.settings.show_featured_articles config.settings.show_featured_in_article}}
         <div class="col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
             <div class="panel panel-default" style="margin-top: 30px;">
                 <div class="panel-heading">Featured articles</div>
@@ -35,7 +35,7 @@
         <div class="col-md-8 col-lg-8">
     {{else}}
         <div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-    {{/if}}
+    {{/ifBoth}}
 		<h1 style="padding-bottom: 25px;padding-top: 15px;">{{result.kb_title}}</h1>
 		<div class="body_text">
             {{{kb_body}}}
