--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -37,30 +37,30 @@
         <meta property="og:image" content="{{current_url}}/logo.png" />
         <meta property="og:url" content="{{fullUrl}}" />
         <link rel="canonical" href="{{fullUrl}}" />
-		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/stylesheets/flatly.bootstrap.min.css">
-        <link rel="stylesheet" href="/simplemde/simplemde.min.css">
-        <link rel="stylesheet" href="/stylesheets/github.css">
-		<link rel="stylesheet" href="/stylesheets/style.css">
-		<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" href="/stylesheets/mermaid.css">
-		<link rel="stylesheet" href="/stylesheets/bootstrap-tokenfield.css">
-        <link rel="stylesheet" href="/stylesheets/jpushmenu.css">
-		<script src="/jquery/jquery.min.js"></script>
-		<script src="/bootstrap/js/bootstrap.min.js"></script>
-        <script src="/javascripts/bootstrap-validator.js"></script>
+		<link rel="stylesheet" href="{{app_context}}/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="{{app_context}}/stylesheets/flatly.bootstrap.min.css">
+        <link rel="stylesheet" href="{{app_context}}/simplemde/simplemde.min.css">
+        <link rel="stylesheet" href="{{app_context}}/stylesheets/github.css">
+		<link rel="stylesheet" href="{{app_context}}/stylesheets/style.css">
+		<link rel="stylesheet" href="{{app_context}}/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="{{app_context}}/stylesheets/mermaid.css">
+		<link rel="stylesheet" href="{{app_context}}/stylesheets/bootstrap-tokenfield.css">
+        <link rel="stylesheet" href="{{app_context}}/stylesheets/jpushmenu.css">
+		<script src="{{app_context}}/jquery/jquery.min.js"></script>
+		<script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
+        <script src="{{app_context}}/javascripts/bootstrap-validator.js"></script>
         {{#ifCond config.settings.enable_mermaid_charts '===' true}}
-		<script src="/javascripts/mermaid.min.js"></script>
+		<script src="{{app_context}}/javascripts/mermaid.min.js"></script>
         {{/ifCond}}
-		<script src="/javascripts/markdown-it-classy.js"></script>
-		<script src="/javascripts/bootstrap-tokenfield.min.js"></script>
-        <script src="/javascripts/inline-attachment.js"></script>
-		<script src="/javascripts/codemirror.inline-attachment.js"></script>
-        <script src="/javascripts/highlight.min.js"></script>
-        <script src="/simplemde/simplemde.min.js"></script>
-		<script src="/markdown-it/markdown-it.min.js"></script>
-        <script src="/javascripts/jpushmenu.js"></script>
-		<script src="/javascripts/openKB.js"></script>
+		<script src="{{app_context}}/javascripts/markdown-it-classy.js"></script>
+		<script src="{{app_context}}/javascripts/bootstrap-tokenfield.min.js"></script>
+        <script src="{{app_context}}/javascripts/inline-attachment.js"></script>
+		<script src="{{app_context}}/javascripts/codemirror.inline-attachment.js"></script>
+        <script src="{{app_context}}/javascripts/highlight.min.js"></script>
+        <script src="{{app_context}}/simplemde/simplemde.min.js"></script>
+		<script src="{{app_context}}/markdown-it/markdown-it.min.js"></script>
+        <script src="{{app_context}}/javascripts/jpushmenu.js"></script>
+		<script src="{{app_context}}/javascripts/openKB.js"></script>
 	</head>
 	<body class="{{show_footer}}">	
 		<!-- Static navbar -->
@@ -73,43 +73,43 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/">{{config.settings.website_title}}</a>
+					<a class="navbar-brand" href="{{app_context}}/">{{config.settings.website_title}}</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						{{#if session.user}}
 							{{#if result._id}}
-								<li><a href="/edit/{{result._id}}">Edit</a></li>
+								<li><a href="{{app_context}}/edit/{{result._id}}">Edit</a></li>
 							{{/if}}
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
 								<ul class="dropdown-menu">
-									<li><a href="/users/new"><i class="fa fa-user-plus fa-fw"></i>&nbsp; New</a></li>
-									<li><a href="/users"><i class="fa fa-users fa-fw"></i>&nbsp; Edit</a></li>
-									<li><a href="/user/edit/{{session.user_id}}"><i class="fa fa-user fa-fw"></i>&nbsp; My account</a></li>
+									<li><a href="{{app_context}}/users/new"><i class="fa fa-user-plus fa-fw"></i>&nbsp; New</a></li>
+									<li><a href="{{app_context}}/users"><i class="fa fa-users fa-fw"></i>&nbsp; Edit</a></li>
+									<li><a href="{{app_context}}/user/edit/{{session.user_id}}"><i class="fa fa-user fa-fw"></i>&nbsp; My account</a></li>
 								</ul>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Article <span class="caret"></span></a>
 								<ul class="dropdown-menu">
-									<li><a href="/insert"><i class="fa fa-plus fa-fw"></i>&nbsp; New</a></li>
-									<li><a href="/articles"><i class="fa fa-pencil fa-fw"></i>&nbsp; Edit</a></li>
+									<li><a href="{{app_context}}/insert"><i class="fa fa-plus fa-fw"></i>&nbsp; New</a></li>
+									<li><a href="{{app_context}}/articles"><i class="fa fa-pencil fa-fw"></i>&nbsp; Edit</a></li>
 								</ul>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
 								<ul class="dropdown-menu">
-									<li><a href="/files"><i class="fa fa-files-o fa-fw"></i>&nbsp; Files</a></li>
-									<li><a href="/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; Export</a></li>
-									<li><a href="/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; Cleanup files</a></li>
+									<li><a href="{{app_context}}/files"><i class="fa fa-files-o fa-fw"></i>&nbsp; Files</a></li>
+									<li><a href="{{app_context}}/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; Export</a></li>
+									<li><a href="{{app_context}}/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; Cleanup files</a></li>
 								</ul>
 							</li>
-							<li><a href="/logout">Logout</a></li>
+							<li><a href="{{app_context}}/logout">Logout</a></li>
 						{{else}}
 							{{#if config.settings.suggest_allowed}}
-								<li><a href="/suggest">Suggest</a></li>
+								<li><a href="{{app_context}}/suggest">Suggest</a></li>
 							{{/if}}
-							<li><a href="/login">Login</a></li>
+							<li><a href="{{app_context}}/login">Login</a></li>
 						{{/if}}	
 					</ul>
 				</div>
@@ -120,6 +120,7 @@
 		</div>
 		<input type="hidden" id="input_notify_message" value="{{message}}">
 		<input type="hidden" id="input_notify_message_type" value="{{message_type}}">
+        <input type="hidden" value="{{app_context}}" id="app_context">
 		<div id="notify_message"></div>
 		{{#if show_footer}}
 			<footer class="footer">
