--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" style="padding-top: 100px" >
-	<form class="form-signin" action="login_action" method="post" role="form" data-toggle="validator">
+	<form class="form-signin" action="{{app_context}}/login_action" method="post" role="form" data-toggle="validator">
 		<input type="hidden" name="frm_referring_url" value="{{referring_url}}">
 		<h2 class="form-signin-heading">Please sign in</h2>
 		<div class="form-group">
