--- a/views/protected_kb.hbs
+++ b/views/protected_kb.hbs
@@ -1,5 +1,5 @@
 <div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" style="padding-top: 100px">
-	<form class="form-signin" action="/protected/action" method="post" role="form">
+	<form class="form-signin" action="{{app_context}}/protected/action" method="post" role="form">
 		<input type="hidden" name="frm_referring_url" value="{{referring_url}}">
 		<h2 class="form-signin-heading" div align="center">This article is locked</h2>
 		<h4 div align="center">Please enter the password to gain access</h4>
