--- a/views/setup.hbs
+++ b/views/setup.hbs
@@ -1,5 +1,5 @@
 <div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" style="padding-top: 50px">
-	<form class="form-signin" action="user_insert" method="post" role="form" data-toggle="validator">
+	<form class="form-signin" action="{{app_context}}/user_insert" method="post" role="form" data-toggle="validator">
 		<h2 class="form-signin-heading text-center">openKB Setup</h2>
         <div class="form-group">
 	    	<label for="frm_kb_title">Users name *</label>
