--- a/views/user_new.hbs
+++ b/views/user_new.hbs
@@ -2,12 +2,12 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 			<ol class="breadcrumb">
-	  			<li><a href="/">Home</a></li>
-	 			<li><a href="/Users">Users</a></li>
+	  			<li><a href="{{app_context}}/">Home</a></li>
+	 			<li><a href="{{app_context}}/Users">Users</a></li>
 	  			<li class="active">New user</li>
 			</ol>
 			<h1>New User</h1>
-			<form method="post" id="edit_form" action="/user_insert" data-toggle="validator">
+			<form method="post" id="edit_form" action="{{app_context}}/user_insert" data-toggle="validator">
             <div class="form-group">
 		    	<label>Users name *</label>
 		    	<input type="text" class="form-control" name="users_name" value="{{user.users_name}}" required>
