--- a/views/articles.hbs
+++ b/views/articles.hbs
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<ol class="breadcrumb">
-	  			<li><a href="/">Home</a></li>
+	  			<li><a href="{{app_context}}/">Home</a></li>
 	 			<li class="active">Articles</li>
 			</ol>
             <div class="col-lg-12">
@@ -14,7 +14,7 @@
 					<span class="input-group-btn">
 						<button class="btn btn-success btn-lg" id="btn_articles_filter">Filter</button>
 						<button class="btn btn-warning btn-lg" id="btn_articles_reset">Reset</button>
-                        <a class="btn btn-info btn-lg" href="/articles/all">All</a>
+                        <a class="btn btn-info btn-lg" href="{{app_context}}/articles/all">All</a>
 					</span>
 				</div>
 			</div>
@@ -28,10 +28,10 @@
 						{{#each results}}
 							<li class="list-group-item">
                                 <div class="row">
-                                    <div class="col-lg-8"><a href="/edit/{{this._id}}">{{this.kb_title}}</a></div>
+                                    <div class="col-lg-8"><a href="{{app_context}}/edit/{{this._id}}">{{this.kb_title}}</a></div>
                                     <div class="col-lg-4 text-right">
                                         <input id="{{this._id}}" class="published_state" type="checkbox" {{checked_state this.kb_published}}>
-                                        <a href="delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a>
+                                        <a href="{{app_context}}/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a>
                                     </div>
                                 </div>
 							</li>
@@ -48,10 +48,10 @@
 						{{#each articles}}
 							<li class="list-group-item">
                                 <div class="row">
-                                    <div class="col-lg-8"><a href="/edit/{{this._id}}">{{this.kb_title}}</a></div>
+                                    <div class="col-lg-8"><a href="{{app_context}}/edit/{{this._id}}">{{this.kb_title}}</a></div>
                                     <div class="col-lg-4 text-right">
                                         <input id="{{this._id}}" class="published_state" type="checkbox" {{checked_state this.kb_published}}>
-                                        <a href="delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a>     
+                                        <a href="{{app_context}}/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a>     
                                     </div>
                                 </div>
 							</li>
