--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-md-12">
-    <form method="post" id="edit_form" action="/insert_kb" data-toggle="validator">
+    <form method="post" id="edit_form" action="{{app_context}}/insert_kb" data-toggle="validator">
         <div class="row">
             <div class="col-xs-12 col-lg-6">
                 <div class="form-group">
