--- a/views/suggest.hbs
+++ b/views/suggest.hbs
@@ -1,6 +1,6 @@
 <div class="col-md-10 col-md-offset-1">
 	<div class="row">
-		<form method="post" id="edit_form" action="/insert_suggest" data-toggle="validator">
+		<form method="post" id="edit_form" action="{{app_context}}/insert_suggest" data-toggle="validator">
 			<input type="hidden" name="frm_kb_id" value="{{result._id}}" />
 			<div id="header row">
 				<div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
