--- a/views/users.hbs
+++ b/views/users.hbs
@@ -2,10 +2,10 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 			<ol class="breadcrumb">
-	  			<li><a href="/">Home</a></li>
+	  			<li><a href="{{app_context}}/">Home</a></li>
 	 			<li class="active">Users</li>
 			</ol>
-			<h1>Users <span class="pull-right"><a href="/users/new" class="btn btn-primary">New user</a></span></h1>
+			<h1>Users <span class="pull-right"><a href="{{app_context}}/users/new" class="btn btn-primary">New user</a></span></h1>
 			<ul class="list-group">
 				{{#each users}}
 					<li class="list-group-item">
@@ -19,8 +19,8 @@
                             {{/is_an_admin}}
                             
                             {{#is_an_admin ../session.is_admin}}
-                                <a href="/user/edit/{{this._id}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
-                                <a href="/user/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a>
+                                <a href="{{app_context}}/user/edit/{{this._id}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
+                                <a href="{{app_context}}/user/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a>
                             {{/is_an_admin}}
 						</span>
 					</li>
