--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -84,18 +84,21 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
 								<ul class="dropdown-menu">
+                                    {{#ifCond session.is_admin '==' 'true'}}
 									<li><a href="{{app_context}}/users/new"><i class="fa fa-user-plus fa-fw"></i>&nbsp; New</a></li>
 									<li><a href="{{app_context}}/users"><i class="fa fa-users fa-fw"></i>&nbsp; Edit</a></li>
+                                    {{/ifCond}}
 									<li><a href="{{app_context}}/user/edit/{{session.user_id}}"><i class="fa fa-user fa-fw"></i>&nbsp; My account</a></li>
 								</ul>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Article <span class="caret"></span></a>
-								<ul class="dropdown-menu">
+                                <ul class="dropdown-menu">
 									<li><a href="{{app_context}}/insert"><i class="fa fa-plus fa-fw"></i>&nbsp; New</a></li>
 									<li><a href="{{app_context}}/articles"><i class="fa fa-pencil fa-fw"></i>&nbsp; Edit</a></li>
 								</ul>
 							</li>
+                            {{#ifCond session.is_admin '==' 'true'}}
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
 								<ul class="dropdown-menu">
@@ -104,6 +107,7 @@
 									<li><a href="{{app_context}}/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; Cleanup files</a></li>
 								</ul>
 							</li>
+                            {{/ifCond}}
 							<li><a href="{{app_context}}/logout">Logout</a></li>
 						{{else}}
 							{{#if config.settings.suggest_allowed}}
