Moved issue #51 to a config

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -125,6 +125,7 @@
 		<input type="hidden" id="input_notify_message" value="{{message}}">
 		<input type="hidden" id="input_notify_message_type" value="{{message_type}}">
         <input type="hidden" value="{{app_context}}" id="app_context">
+        <input type="hidden" value="{{config.settings.links_blank_page}}" id="blank_links">
 		<div id="notify_message"></div>
 		{{#if show_footer}}
 			<footer class="footer">
