Fix #75 - Moved settings to admin UI interface

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -102,6 +102,7 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
 								<ul class="dropdown-menu">
+                                    <li><a href="{{app_context}}/settings"><i class="fa fa-cog fa-fw"></i>&nbsp; Settings</a></li>
 									<li><a href="{{app_context}}/files"><i class="fa fa-files-o fa-fw"></i>&nbsp; Files</a></li>
 									<li><a href="{{app_context}}/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; Export</a></li>
 									<li><a href="{{app_context}}/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; Cleanup files</a></li>
